# FAIRMetadataCuration

./: MIGRATION.md  README.md  pyproject.toml
examples/: curated_output.jsonl  curated_output.jsonl.audit.json  curated_output.jsonld  input_records.jsonl  validation_report.md
notebooks/: 01_original_prompt_baseline.ipynb  02_validated_curation_pipeline.ipynb
src/fair_metadata_curation/: __init__.py  cli.py  io.py  models.py  preprocessing.py
src/fair_metadata_curation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fair_metadata_curation/curation/: __init__.py  pipeline.py  proposal.py  provenance.py  remediation.py
src/fair_metadata_curation/export/: __init__.py  json_export.py  jsonld_export.py  report.py
src/fair_metadata_curation/llm/: __init__.py  base.py  mock_provider.py  openai_provider.py  prompts.py
src/fair_metadata_curation/ontology/: __init__.py  base.py  local_cache.py  normalize.py  ols.py
src/fair_metadata_curation/schemas/: biosample_cedar.linkml.yaml  biosample_cedar.schema.json  biosample_cedar.shacl.ttl
src/fair_metadata_curation/validation/: __init__.py  errors.py  ontology_validator.py  schema_validator.py  semantic_validator.py
tests/: test_ontology_resolution.py  test_pipeline.py  test_safe_parsing.py  test_schema_validation.py
tests/fixtures/: expected_proposal.json  mock_llm_response.json  ontology_cache.json  raw_record.json
